# OrderBookMatching

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  draw_flow.py
benchmarks/: CMakeLists.txt  bench_end_to_end.cpp  bench_insertion.cpp  bench_matching.cpp
cmake/: FetchDependencies.cmake
data/: sample_ticks.csv
include/obm/: AuctionCross.hpp  Benchmark.hpp  FIXEncoder.hpp  FIXParser.hpp  FIXSession.hpp  FlatMap.hpp  MarketDataSimulator.hpp  MatchingEngine.hpp  MemoryPool.hpp  Order.hpp  OrderBook.hpp  PriceLevel.hpp  RingBuffer.hpp  RiskEngine.hpp  TickDataReplayer.hpp  Types.hpp
python/: CMakeLists.txt  obm.cp310-win_amd64.pyd  obm_py.cpp
python/Release/: obm.cp310-win_amd64.pyd
src/: AuctionCross.cpp  FIXEncoder.cpp  FIXParser.cpp  FIXSession.cpp  MarketDataSimulator.cpp  MatchingEngine.cpp  Order.cpp  OrderBook.cpp  PriceLevel.cpp  RiskEngine.cpp  TickDataReplayer.cpp  main.cpp
tests/: CMakeLists.txt  test_auction_cross.cpp  test_flat_map.cpp  test_integration.cpp  test_matching.cpp  test_memory_pool.cpp  test_modify_order.cpp  test_order_types.cpp  test_partitioning.cpp  test_property.cpp  test_ring_buffer.cpp  test_risk_engine.cpp
tools/: generate_explainer_pdf.py
